<resources>
    <string name="app_name">Easycalcio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- New match strings -->
    <string name="match_title">Title</string>
    <string name="match_date">Date</string>
    <string name="match_address">Address</string>
    <string name="match_city">City</string>
    <string name="match_time">Time</string>
    <string name="match_players_number">N° players</string>
    <string name="players_number_text_view">10</string>
    <string name="match_friends">Friends</string>
    <string name="match_organizer">Organizer</string>
    <string name="match_players">Players</string>

    <!-- Match friends strings -->
    <string name="friend_name">Name</string>
    <string name="friend_username">Username</string>
    <string name="friend_role">Role</string>

    <!-- MainActivity string -->
    <string name="empty_match_list">You have no future matches. Create one by clicking the button below.</string>

    <!-- Login/Registration strings -->
    <string name="insert_email_address">Insert email address..</string>
    <string name="insert_password">Insert password..</string>

    <!-- Registration strings -->
    <string name="registration_username">Username</string>
    <string name="registration_name">Name</string>
    <string name="registration_surname">Surname</string>
    <string name="registration_birthday">Birthday</string>
    <string name="registration_city">City</string>
    <string name="registration_role">Role</string>

    <string-array name="roles">
        <item>Select a role..</item>
        <item>Goalkeeper</item>
        <item>Center back</item>
        <item>Full back</item>
        <item>Center midfielder</item>
        <item>Wing</item>
        <item>Striker</item>
    </string-array>

    <!-- Profile strings -->
    <string name="change_profile_picture">Change profile picture</string>
    <string name="friend_profile_add_friend">Add friend</string>
    <string name="friend_profile_remove_friend">Remove friend</string>
    <string name="friend_profile_request_sent">Request sent</string>
    <string name="friend_profile_request_received">Request received</string>
    <string name="friend_profile_chat">Chat</string>
    <string name="write_your_message">Write your message..</string>

    <string name="empty_friend_list_text">Search for users and send them a friend request</string>
    <string name="no_friend_requests">You have no friend requests at the moment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_match_requests">You have no match requests at the moment</string>
</resources>