<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textPersonName"
            android:layout_margin="10sp"
            android:hint="@string/match_title"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_margin="10sp"
            android:hint="@string/match_date"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_margin="10sp"
            android:hint="@string/match_time"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextTextCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textPostalAddress"
            android:layout_margin="10sp"
            android:hint="@string/match_city"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textPostalAddress"
            android:layout_margin="10sp"
            android:hint="@string/match_address"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10sp"
            android:layout_marginTop="20sp"
            android:gravity="center">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_players_number"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/playersNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/players_number_text_view"
                android:textSize="20sp"
                android:layout_marginStart="4sp"
                android:layout_marginEnd="4sp"/>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="22"
                android:min="10"
                android:stepSize="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10sp"
            android:layout_marginTop="20sp"
            android:gravity="center">


            <TextView
                android:id="@+id/matchFriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/match_friends"
                android:textSize="20sp" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/matchFriendsFragment"
                android:name="com.example.easycalcio.fragments.MatchFriendsFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="20sp"
        app:srcCompat="@android:drawable/ic_menu_save" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>